horizontal scrollbar issue fixed

--- a/assets/css/gen-css.css
+++ b/assets/css/gen-css.css
@@ -41,6 +41,11 @@ body .site-container {
 html {
   overflow-x: hidden;
 }
+@media (max-width: 576px) {
+  html {
+    overflow-x: hidden;
+  }
+}
 
 body {
   font-family: "Lato", sans-serif;
